# Perseverance-Bot

./: .gitignore  CODE_OF_CONDUCT.md  README.md  commands.txt  feedback.txt  log.py  main.py  pyproject.toml  removeguildcommands.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cmds/: ai.py  credits.py  define.py  eight_ball.py  encourage.py  feedback.py  feedback.txt  googlestuff.py  help.py  inspire.py  morse.py  poll.py  purge.py  reply.py  tic.py  uno.py  words.py  ytactivity.py  ytextract.py
cogs/: feedback.py  fun.py  games.py  google.py  moderation.py  text.py  utility.py  vc.py
commands/: credits.py  define.py  embed.py  feedback.py  googlestuff.py  inspire.py  poll.py
website/: keep_alive.py
website/templates/: code.html  commands.html  commands_desktop.html  commands_mobile.html  home_desktop.html  home_mobile.html
