[tool.poetry]
name = "encourage-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^2.0.0"
flask = "^1.1.2"
pytz = "^2021.1"
wikipedia = "^1.4.0"
pyjokes = "^0.6.0"
google-api-helper = "^0.3.1"
metadata-parser = "^0.10.4"
googletrans = "^3.0.0"
pydictionary = "^2.0.1"
PyNaCl = "^1.4.0"
beautifulsoup4 = "^4.9.3"
soupsieve = "^2.2"
googlesearch-python-extended = "^2020.1.0"
lxml = "^4.6.2"
"discord.py" = "^1.6.0"
discord-py-slash-command = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
